[package]
name = "emote_shuffler"
authors = ["Juliapixel <contact@juliapixel.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/juliapixel/emote_shuffler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
env_logger = "0.11"
graphql_client = "0.14"
indicatif = "0.17"
log = "0.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["brotli", "charset", "gzip", "h2", "http2", "json", "rustls-tls", "cookies"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.41", features = ["full"] }
